import { Controller, Post, Body, Req, HttpStatus } from '@nestjs/common';
import { Request } from 'express';
import { lastValueFrom } from 'rxjs';
import { GrpcSPRWkMmEmpDaysService } from 'src/grpc/service/hr/dailyAtt/SPRWkMmEmpDays.service';
@Controller('v6/hr')
export class SPRWkMmEmpDaysController {
    constructor(private readonly grpcSPRWkMmEmpDaysService: GrpcSPRWkMmEmpDaysService) { }

    @Post('SPRWkMmEmpDaysQ')
    SPRWkMmEmpDaysQ(@Body() body: { result: any }, @Req() req: Request) {
        if (!body?.result) {
            return { success: false, message: 'Invalid request: Missing "result"' };
        }

        const authorization = req.headers.authorization || '';
        const requestData = { result: body.result, metadata: { authorization } };

        return lastValueFrom(this.grpcSPRWkMmEmpDaysService.SPRWkMmEmpDaysQ(requestData.result, requestData.metadata))
            .then((resu) => {
                return resu;
            })
            .catch((error) => {
                return { success: false, message: 'Internal Server Error' };
            });
    }
    @Post('SPRWkMmEmpDaysAUD')
    SPRWkMmEmpDaysAUD(@Body() body: { result: any }, @Req() req: Request) {
        if (!body?.result) {
            return { success: false, message: 'Invalid request: Missing "result"' };
        }

        const authorization = req.headers.authorization || '';
        const requestData = { result: body.result, metadata: { authorization } };

        return lastValueFrom(this.grpcSPRWkMmEmpDaysService.SPRWkMmEmpDaysAUD(requestData.result, requestData.metadata))
            .then((resu) => {
                return resu;
            })
            .catch((error) => {
                return { success: false, message: 'Internal Server Error' };
            });
    }
    @Post('SPRWkMmEmpDaysObjQ')
    SPRWkMmEmpDaysObjQ(@Body() body: { result: any }, @Req() req: Request) {
        if (!body?.result) {
            return { success: false, message: 'Invalid request: Missing "result"' };
        }

        const authorization = req.headers.authorization || '';
        const requestData = { result: body.result, metadata: { authorization } };

        return lastValueFrom(this.grpcSPRWkMmEmpDaysService.SPRWkMmEmpDaysObjQ(requestData.result, requestData.metadata))
            .then((resu) => {
                return resu;
            })
            .catch((error) => {
                return { success: false, message: 'Internal Server Error' };
            });
    }
    @Post('SPRWkMmEmpDaysProc')
    SPRWkMmEmpDaysProc(@Body() body: { result: any }, @Req() req: Request) {
        if (!body?.result) {
            return { success: false, message: 'Invalid request: Missing "result"' };
        }

        const authorization = req.headers.authorization || '';
        const requestData = { result: body.result, metadata: { authorization } };

        return lastValueFrom(this.grpcSPRWkMmEmpDaysService.SPRWkMmEmpDaysProc(requestData.result, requestData.metadata))
            .then((resu) => {
                return resu;
            })
            .catch((error) => {
                return { success: false, message: 'Internal Server Error' };
            });
    }
}